# munsailbot

./: Notes.md  README.md  Sailbot-GPS.h  Sailbot-GPS.txt  graph.R  kMean.h  kMean.txt  test.py  track.csv  waypoints.txt  waypoints1.txt  waypoints2sk.txt
BeagleCode/: CMakeLists.txt
BeagleCode/BeagleUtil/: CMakeLists.txt
BeagleCode/BeagleUtil/include/: Analog.h  BeagleUtil.h  Common.h  GPIO.h  I2C.h  PWM.h  UART.h  UARTInterface.h
BeagleCode/BeagleUtil/src/: Analog.cpp  GPIO.cpp  I2C.cpp  PWM.cpp  UART.cpp  UARTInterface.cpp
BeagleCode/SailbotBrain/: CMakeLists.txt
BeagleCode/SailbotBrain/include/: ArduinoEncoder.h  Autonomy.h  AverageAngle.h  ConstKalmanFilter.h  HanningFilter.h  LSM303DLM.h  Logger.h  SailbotBrain.h  Testing.h  Timer.h  Utility.h  Vec2.hpp  VectorFilter.h  WindFilter.h  WindStatFilter.h  WindVector.h  filterAlphaBeta.h
BeagleCode/SailbotBrain/include/TinyGPSPlus/: TinyGPS++.h
BeagleCode/SailbotBrain/src/: ArduinoEncoder.cpp  Autonomy.cpp  AverageAngle.cpp  LSM303DLM.cpp  Logger.cpp  Timer.cpp  Utility.cpp  VectorFilter.cpp  WindFilter.cpp  WindStatFilter.cpp  filterAlphaBeta.cpp  main.cpp  testing.cpp
BeagleCode/SailbotBrain/src/TinyGPSPlus/: TinyGPS++.cpp
BeagleCode/ncurses/: README.md
BeagleCode/ncurses/include/: Makefile  ncurses_cfg.h
BeagleCode/ncurses/lib/: libform.so.5  libmenu.so.5  libncurses.so.5  libpanel.so.5
Docs/: bootstrap.sh  graph.R  log.txt  startup.sh  track.csv  uART.sh
HardwareController/: .cproject  .project  LiquidCrystal.cpp  LiquidCrystal.h  ahsdf  common.cpp  common.h  main.cpp  motor.cpp  motor.h  timer.cpp  timer.h
HardwareController/OS/: error_code.h  kernel.h  os.cpp  os.h
MotorController/: .cproject  .project  CMakeLists.txt  upload.sh
MotorController/include/: common.h  currentSensor.h  encoder.h  motor.h  pid.h
MotorController/src/: common.cpp  currentSensor.cpp  encoder.cpp  main.cpp  motor.cpp  pid.cpp
RTuinOS/: GNUmakefile  Makefile  Makefile1  upload.sh  version.txt
RTuinOS/code/RTOS/: rtos.c  rtos_assert.h
RTuinOS/code/applications/sailbot/: Beagle.cpp  Beagle.h  Common.h  Motor.cpp  Motor.h  rtos.config.h  sailbot.c
RTuinOS/code/applications/tc01/: rtos.config.h  tc01_idleTaskOnly.c
RTuinOS/code/applications/tc02/: rtos.config.h  tc02_oneTask.c
RTuinOS/code/applications/tc03/: rtos.config.h  tc03_RTTasks.c
RTuinOS/code/applications/tc04/: rtos.config.h  tc04_2Task1PrioClass.c
RTuinOS/code/applications/tc05/: rtos.config.h  tc05_sendEventAndReconfigureSystemTimer.c
RTuinOS/code/applications/tc06/: rtos.config.h  tc06_roundRobin.c
RTuinOS/code/applications/tc07/: rtos.config.h  tc07_criticalSection.c
RTuinOS/code/applications/tc08/: rtos.config.h  tc08_applEvents.h  tc08_applInterrupt.c
RTuinOS/code/applications/tc09/: rtos.config.h  tc09_applEvents.h  tc09_pseudoMutex.c
RTuinOS/code/applications/tc10/: rtos.config.h  tc10_systemLoad.c
RTuinOS/code/applications/tc11/: rtos.config.h  tc11_applEvents.h  tc11_mutex.c
RTuinOS/code/applications/tc12/: aev_applEvents.h  integerSineZ_private.h  itq_interTaskQueue.c  rtos.config.h  rtwtypes.h  stdout.c  stdout.h  tc12.mk  tc12_queue.c
RTuinOS/code/applications/tc13/: aev_applEvents.h  (+4 more)
RTuinOS/doc/doxygen/: doxyfile  mainpage.txt  readMe.txt
RTuinOS/makefile/: compileLinkAndUpload.mk
Simulator/: Boat.java  BoatMovement.java  Line.java  Vector.java  XYCoord
Testing/: angle_between.py  angle_direction.py  cardinal_to_standard.py  course_by_wind.py  requirements.txt  tack.py  test.py  upwind.py
munsalbot/munsalbot/: main.cpp
munsalbot/munsalbot.xcodeproj/: project.pbxproj
munsalbot/munsalbot.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
(+26 files in other folders)
